--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
